Implementação de uma nova camada com a responsabilidade de entrega da funcionalidade, ou seja, a aplicação em si. Nessa camada fica a API REST implementada com Spring.