@@ -11,17 +11,21 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>zup-adapter</module>
+        <module>zup-application</module>
         <module>zup-domain</module>
         <module>zup-usecase</module>
-        <module>zup-adapter</module>
     </modules>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
+        <spring-boot.version>2.3.3.RELEASE</spring-boot.version>
+
         <junit.version>5.6.2</junit.version>
+        <failsafe.version>3.0.0-M5</failsafe.version>
         <jacoco.version>0.8.5</jacoco.version>
 
         <skip.unit.tests>false</skip.unit.tests>
@@ -30,8 +34,41 @@
         <branch.coverage>0.9</branch.coverage>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${failsafe.version}</version>
+                <configuration>
+                    <argLine>${argLine} --illegal-access=permit</argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <forkMode>never</forkMode>
+                            <skipTests>${skip.it.tests}</skipTests>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -85,6 +122,12 @@
                     <fileSets>
                         <fileSet>
                             <directory>${project.basedir}/zup-adapter/target</directory>
+                            <includes>
+                                <include>jacoco.exec</include>
+                            </includes>
+                        </fileSet>
+                        <fileSet>
+                            <directory>${project.basedir}/zup-application/target</directory>
                             <includes>
                                 <include>jacoco.exec</include>
                             </includes>
